--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <body>
     <p>
-    <p><img src="thresherOfficial.png" width="600" height="111"></p>
+    <p><img src="logo.png" width="600" height="111"></p>
     <div id="toHide">
         <p><i> The Tech Purity Test is a version of the Rice Purity Test used to track "tech bro" experiences.</i></p>
         <p><strong>Caution: This is not a bucket list. Completion of all items on this test will likely result in becoming a mindless tech bro.</strong></p>
